// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly 1`] = `
<div>
  <div
    class="bp3-navbar sc-EHOje dYMYMZ"
  >
    <div
      class="sc-bxivhb sc-bZQynM iSWjGC"
    >
      <div
        class="bp3-navbar-group bp3-align-left"
      >
        <div
          class="bp3-navbar-heading"
        >
          <a
            href="/"
          >
            <img
              alt="Arlo, by VotingWorks"
              src="/arlo.png"
            />
          </a>
        </div>
      </div>
      <div
        class="bp3-navbar-group bp3-align-right"
      >
        <div
          class="sc-ifAKCX jNLPyG"
          id="reset-button-wrapper"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Header shows the nav bar when authenticated and there is an electionId 1`] = `
<div>
  <div
    class="bp3-navbar sc-EHOje dYMYMZ"
  >
    <div
      class="sc-bxivhb sc-bZQynM iSWjGC"
    >
      <div
        class="bp3-navbar-group bp3-align-left"
      >
        <div
          class="bp3-navbar-heading"
        >
          <a
            href="/"
          >
            <img
              alt="Arlo, by VotingWorks"
              src="/arlo.png"
            />
          </a>
        </div>
      </div>
      <div
        class="bp3-navbar-group bp3-align-right"
      >
        <div
          class="bp3-navbar-heading"
        >
          <a
            href="/election/1/setup"
          >
            Audit Setup
          </a>
        </div>
        <div
          class="bp3-navbar-divider"
        />
        <div
          class="bp3-navbar-heading"
        >
          <a
            href="/election/1/progress"
          >
            Audit Progress
          </a>
        </div>
        <div
          class="bp3-navbar-divider"
        />
        <div
          class="bp3-navbar-heading"
        >
          <a
            href="/"
          >
            View Audits
          </a>
        </div>
        <div
          class="bp3-navbar-divider"
        />
        <div
          class="bp3-navbar-heading"
        >
          <a
            href="/"
          >
            New Audit
          </a>
        </div>
        <div
          class="sc-ifAKCX jNLPyG"
          id="reset-button-wrapper"
        />
        <button
          class="bp3-button bp3-small sc-bwzfXH eBfcXh"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Log out
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
